--- a/web/style.css
+++ b/web/style.css
@@ -11,7 +11,7 @@ and open the template in the editor.
 body{
     min-width: 500px;
     margin: 0;
-    font-family: "Tahoma", sans-serif;
+    font-family: Helvetica Nue, Helvetica, Arial, sans-serif;
 }
 
 .container{
@@ -63,6 +63,10 @@ article{
     padding: 0px 20px;
 }
 
+#buscar{
+    box-shadow: 0px 1px 2px royalblue;
+}
+
 /*form{
     text-align: left;
 }*/
@@ -87,7 +91,7 @@ body{
 }
 
 header, footer{
-    background-color: blue;
+    background-color:royalblue;
     color: lightgray;
 }
 
@@ -97,8 +101,20 @@ header a:visited
 header a:active{
     color: lightyellow;
 }
+header a:hover{
+    text-shadow: 0px 0px 5px white;
+}
+header ul li a:hover{
+    background-color:white;
+    color:royalblue;
+    box-shadow: 0px 0px 5px white;
+}
 
+p .row{
+    padding: 5px 5px;
+}
 article{
+    padding: 25px 25px 25px 25px;
     border: solid 1px #999;
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px;
@@ -115,8 +131,12 @@ nav ul li a .active{
 
 form p.row {
     width: 100%;
-    text-align: left;
+    text-align:left;
 }
 form p.row .right {
+    width:37%;
     float:right;
+}
+form p.row .right:hover{
+    box-shadow: 0px 0px 8px royalblue;
 }
