--- a/web/styleResultados.css
+++ b/web/styleResultados.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 body{
     min-width: 500px;
     margin: 0;
-    font-family: 'Tahoma', sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .container{
@@ -91,7 +91,7 @@ body{
 }
 
 header, footer{
-    background-color:#00F;
+    background-color: royalblue;
     color: lightgray;
 }
 
